Fix z-index

--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -5,6 +5,7 @@ nav.sidebar {
     height: 100vh;
     position: fixed;
     padding: 0 $sidebar-padding;
+    z-index: 9;
 
     select#cidades {
         background-color: $light-gray;
